// Copyright Â© 2019 The Things Network Foundation, The Things Industries B.V.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "lorawan-stack/api/lorawan.proto";

package ttn.lorawan.v3;

option go_package = "go.thethings.network/lorawan-stack/v3/pkg/ttnpb";

// TODO: Migrate away from GoGo Protobuf (https://github.com/TheThingsNetwork/lorawan-stack/issues/2798).
option (gogoproto.enum_stringer_all) = true;
option (gogoproto.goproto_enum_stringer_all) = false;
option (gogoproto.goproto_registration) = true;

message ListFrequencyPlansRequest {
  // Optional base frequency in MHz for hardware support (433, 470, 868 or 915)
  uint32 base_frequency = 1;
}

message FrequencyPlanDescription {
  string id = 1;
  // The ID of the frequency that the current frequency plan is based on.
  string base_id = 2;
  string name = 3;
  // Base frequency in MHz for hardware support (433, 470, 868 or 915)
  uint32 base_frequency = 4;
}

message ListFrequencyPlansResponse {
  repeated FrequencyPlanDescription frequency_plans = 1;
}

message GetPhyVersionsRequest {
  // Optional Band ID to filter the results.
  // If unused, all supported Bands and their versions are returned.
  string band_id = 1;
}

message GetPhyVersionsResponse {
  message VersionInfo {
    string band_id = 1;
    repeated PHYVersion phy_versions = 2;
  }
  repeated VersionInfo version_info = 2;
}

service Configuration {
  rpc ListFrequencyPlans(ListFrequencyPlansRequest) returns (ListFrequencyPlansResponse) {
    option (google.api.http) = {
      get: "/configuration/frequency-plans"
    };
  }

  // Returns a list of supported LoRaWAN PHY Versions for the given Band ID.
  rpc GetPhyVersions(GetPhyVersionsRequest) returns (GetPhyVersionsResponse) {
    option (google.api.http) = {
      get: "/configuration/phy-versions"
    };
  }
}
